--- a/frontend/src/Register/RegisterForm.scss
+++ b/frontend/src/Register/RegisterForm.scss
@@ -41,7 +41,7 @@
   }
 
   &__legal-requirements {
-    color: #777777;
+    color: #555;
     font-size: 12px;
     text-align: center;
   }
