--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -23,7 +23,7 @@ code {
 
 a {
   text-decoration: none;
-  color: #4285F4;
+  color: #3F729B;
 
   &:hover {
     text-decoration: underline;
